--- a/reports/83332.12/genome-report.html
+++ b/reports/83332.12/genome-report.html
@@ -1,14 +1,17 @@
+<!DOCTYPE html>
 <html>
     <head>
+        <title>PATRIC Genome Report | 83332.12</title>
+
         <style>
-           html {
+
+            body {
                 font-family: 'Open Sans', sans-serif;
                 color: #444;
-            }
-            body {
                 display: flex;
                 flex-direction: column;
             }
+
             a {
                 text-decoration: none;
                 color: #0d78ef;
@@ -64,8 +67,9 @@
             }
 
         </style>
+        <link rel="stylesheet" type="text/css" href="/templates/gr-template.css" media="screen, print">
     </head>
-    <body style="width: 100%; font-size: 1em" cz-shortcut-listen="true">
+    <body>
 
         <section>
             <img src="../../patric-logo.svg" class="logo">
@@ -76,20 +80,14 @@
             </div>
 
             <div class="report-info">
-                Report Date: 2018&#x2F;02&#x2F;28<br>
+                Report Date: 2018&#x2F;03&#x2F;02<br>
                 Organism: Mycobacterium tuberculosis H37Rv
             </div>
         </section>
 
         <br>
 
-        <!--
-        <section style="width: 100%;">
-            <h2>Authors</h2>
-        </section>
-        -->
-
-        <section style="width: 100%;">
+        <section >
 
             <h2>General Information for the genus Mycobacterium tuberculosis H37Rv </h2>
             Brucella is a genus of Gram-negative bacteria. They are small (0.5 to 0.7 by 0.6 to 1.5 µm), nonencapsulated,
