more tables and wiki summary

--- a/reports/520456.3/genome-report.html
+++ b/reports/520456.3/genome-report.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>PATRIC Genome Report | 520456.3</title>
+        <title>PATRIC Genome Report | </title>
+
+        <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700,800,900" rel="stylesheet">
 
         <style>
 
             body {
-                font-family: 'Open Sans', sans-serif;
+                font-family: 'Work Sans', sans-serif;
                 color: #444;
+                /*
                 display: flex;
                 flex-direction: column;
+                */
             }
+            /*
+            header {
+                display:flex;
+                flex-direction: row;
+                align-items: flex-start;
+                flex-wrap: nowrap;
+            }*/
             a {
                 text-decoration: none;
                 color: #0d78ef;
@@ -18,44 +29,87 @@
             a:hover {
                 text-decoration: underline;
             }
+
+            h2 {
+                font-size: 1.45em;
+                font-weight: 500;
+            }
+
+            .pull-left {
+                float: left;
+            }
+            .pull-right {
+                float: right;
+            }
+
             h2 small {
                 color: #aaa;
             }
             table {
                 border-collapse: collapse;
             }
-            tr {
-                page-break-inside: avoid;
+
+            /* standard key-value table */
+            .kv-table {
+                text-align: left;
             }
-            .report-title {
-                display: inline-block;
-                position: relative;
+            .kv-table td:first-child,
+            .kv-table td:nth-child(3) {
+                font-weight: 600;
+            }
+
+            .table-header {
+                color: #fff;
+                background: #196E9C;
+                padding: 5px;
+            }
+            .table-header th {
+                font-weight: 400;
+            }
+            th, td {
+                padding: 5px;
+            }
+            th  {
+                border-bottom: 2px solid #196E9C;
+            }
+            tr {
+                border-bottom: 1px solid #aaa;
+            }
+
+            .overview-table {
+                width: 80%;
+                margin-left: auto;
+                margin-right: auto;
+            }
+
+            .small-table {
+                width: 40%;
+                margin-left: auto;
+                margin-right: auto;
+            }
+
+            .logo {
+                width: 200px;
+                border-right: 3px solid #444;
+                padding-right: 10px;
+                margin-right: 10px;
             }
             .title {
-                float: left;
-                margin-left: 10px;
-                position:absolute;
-                bottom: 0;
+                padding: 10px 0 0 0px;
                 font-size: 1.3em;
                 color: #444;
             }
             .report-info {
-                float: right;
-                position: relative;
                 text-align: right;
                 margin-right: 30px;
                 font-size:.8em;
                 color: #777;
             }
-            span.v-divide {
-                width: 5px;
-                height: 90px;
-                border-right: 5px solid #444;
-                float: left;
+
+            .main-img {
+                width: 250px;
             }
-            .logo {
-                width: 40%;
-            }
+
             .subsystem-img {
                 width: 1200px;
                 height: 600px;
@@ -64,19 +118,15 @@
 
     </head>
     <body>
-        <header>
-            <div class="report-title">
-                <span>
-                    <img src="../../patric-logo.svg" class="logo">
-                </span>
-
-                <span class="v-divide"></span>
-                <span class="title">Genome Report</span>
+        <header style="width: 100%">
+            <div>
+                <img src="../../patric-logo.svg" class="logo pull-left">
+                <div class="title">Genome Report</div>
             </div>
 
-            <div class="report-info">
-                Report Date: 2018&#x2F;03&#x2F;05<br>
-                Organism: Mycobacterium tuberculosis H37Rv
+            <div class="report-info pull-right">
+                Report Date: 2018&#x2F;03&#x2F;06<br>
+                Organism: Brucella neotomae 5K33
             </div>
         </header>
 
@@ -86,18 +136,22 @@
         <section>
             <h2>Introduction</h2>
             <p>
-            Brucella is a genus of Gram-negative bacteria. They are small (0.5 to 0.7 by 0.6 to 1.5 µm), nonencapsulated, nonmotile, facultative intracellular coccobacilli.
-            Brucella is the cause of brucellosis, which is a zoonosis transmitted by ingesting
-            contaminated food (such as unpasteurized milk products), direct contact with an
-            infected animal, or inhalation of aerosols. Transmission from human to human,
-            for example through sexual intercourse or from mother to child, is exceedingly
-            rare, but possible. Minimum infectious exposure is between 10 and 100 organisms.
-            The different species of Brucella are genetically very similar, although each has a
-            slightly different host specificity.
+                <img src=https:&#x2F;&#x2F;upload.wikimedia.org&#x2F;wikipedia&#x2F;commons&#x2F;thumb&#x2F;c&#x2F;c3&#x2F;Brucella_melitensis.jpg&#x2F;400px-Brucella_melitensis.jpg class="pull-left main-img"/>
+                <span class="pull-left"><p><i><b>Brucella</b></i> is a genus of Gram-negative bacteria, named after David Bruce (1855–1931). They are small (0.5 to 0.7 by 0.6 to 1.5 µm), nonencapsulated, nonmotile, facultatively intracellular coccobacilli.</p>
+<p><i>Brucella</i> is the cause of brucellosis, which is a zoonosis transmitted by ingesting contaminated food (such as unpasteurized milk products), direct contact with an infected animal, or inhalation of aerosols. Transmission from human to human, for example through sexual intercourse or from mother to child, is exceedingly rare, but possible. Minimum infectious exposure is between 10 and 100 organisms.</p>
+<p>The different species of <i>Brucella</i> are genetically very similar, although each has a slightly different host specificity. Hence, the NCBI taxonomy includes most <i>Brucella</i> species under <i>B. melitensis</i>.</p>
+<p>The many names of brucellosis include (human disease/animal disease):</p>
+<ul><li>Malta fever/Bang's disease</li>
+<li>Undulant fever/enzootic abortion</li>
+<li>Mediterranean fever/epizootic abortion</li>
+<li>Rock fever of Gibraltar/slinking of calves</li>
+<li>Gastric fever/ram epididymitis</li>
+<li>Contagious abortion/spontaneous abortion</li>
+</ul><p></p></span>
             </p>
 
             <p>
-            Brucella neotomae BNWLG2-S2 was isolated from the urine of a 49 year-old female who presented to a clinic in Pennsylvania on April 26th 2016 with symptoms indicative of a UTI. It harbors mcr-1 and blaCTX-M on a Novel IncF Plasmid, First report of mcr-1 in the USA.
+                Brucella neotomae BNWLG2-S2 was isolated from the urine of a 49 year-old female who presented to a clinic in Pennsylvania on April 26th 2016 with symptoms indicative of a UTI. It harbors mcr-1 and blaCTX-M on a Novel IncF Plasmid, First report of mcr-1 in the USA.
             </p>
         </section>
 
@@ -110,46 +164,78 @@
             </p>
             <p>
                 The assembled genome has 33 contigs, with the total length of 3.31 Mbp and %GC of 57.26%.
-
-                
             </p>
+
+            <table class="overview-table kv-table">
+                <thead class="table-header">
+                    <tr><th colspan="4">Table 1. Assembly details for Brucella neotomae 5K33</th></tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <td>Contigs</td><td>11</td>
+                        <td>GC Content</td><td>57.3</td>
+                    </tr>
+                    <tr>
+                        <td>Plasmids</td><td>0</td>
+                        <td>Contig L50</td><td>1</td>
+                    </tr>
+                    <tr>
+                        <td>Genome Length</td><td>3329623</td>
+                        <td>Contig N50</td><td>1923503</td>
+                    </tr>
+                    <tr>
+                        <td>Chromosomes</td><td>0</td>
+                        <td></td><td></td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
 
         <section>
             <h2>Genome Annotation</h2>
             <p>
                 The Genome Annotation Service in PATRIC [1] uses the RAST tool kit (RASTtk) [6] to
-                provide annotation of genomic features.  The job for B. neotomae BNWLG2-S2
-                    ran under job number 685fb8c1-348a-4cea-a298-496b037af1f8.
+                provide annotation of genomic features. The job for B. neotomae BNWLG2-S2
+                ran under job number 685fb8c1-348a-4cea-a298-496b037af1f8.
                 The annotation job started at 10/9/17, 7:10 AM and completed at 10/9/17, 8:16 AM,
                 after 1h 5m 3623s.  The selected domain was Bacteria, the Taxonomy ID was 234.128.
                 The Genetic code was 11.  The taxonomy of B. neotomae BNWLG2-S2 is:
             </p>
 
-            <taxonomy></taxonomy>
+            Bacteria &gt;&gt; Proteobacteria &gt;&gt; Alphaproteobacteria &gt;&gt; Rhizobiales &gt;&gt; Brucellaceae &gt;&gt; Brucella &gt;&gt; Brucella neotomae &gt;&gt; Brucella neotomae 5K33<br>
+            <br>
 
-            The annotations includes 3349 CDS, 50 tRNAs and 3 rRNAs. All annotated genome features for this genome are summarized in Table 3.
+            <p>
+                The annotations includes 3349 CDS, 50 tRNAs and 3 rRNAs.
+                All annotated genome features for this genome are summarized in Table 3.
+            </p>
 
-            The functional annotation included 655 hypothetical proteins and 2694 proteins with functional assignments. Furthermore, 963 proteins were  assigned EC numbers and 749 proteins were mapped to KEGG pathways.  A breakdown of the proteins that have been annotated for this isolate is provided in Table 4.
+            <p>
+                The functional annotation included 655 hypothetical proteins and 2694 proteins with functional assignments.
+                Furthermore, 963 proteins were  assigned EC numbers and 749 proteins were mapped to KEGG pathways.
+                A breakdown of the proteins that have been annotated for this isolate is provided in Table 4.
+            </p>
+
+
+            <table class="small-table kv-table">
+                <thead class="table-header">
+                    <tr>
+                        <th colspan="2">Table 3. Annotated Genome Features</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr><td></td> <td><b>PATRIC</b></td></tr>
+                    <tr><td>CDS</td><td>3434</td></tr>
+                    <tr><td>tRNA</td><td>48</td></tr>
+                    <tr><td>pseudogene</td><td>23</td></tr>
+                    <tr><td>rRNA</td><td>3</td></tr>
+                    <tr><td>misc_RNA</td><td>1</td></tr>
+                </tbody>
+            </table>
 
         </section>
 
-
-
-        <!--
-        <section>
-            <h2>Details on specialty genes for Mycobacterium tuberculosis H37Rv</h2>
-            A graphical display of the distribution of the CDS on each strand, the repeat_regions, GC content and GC skew are provided (Figure 1).
-            <small>[<a href="https://patricbrc.org/view/Genome/520456.3#view_tab=circular">view online</a>]</small>
-            <div>
-                <img src="520456.3-circular.png">
-            </div>
-
-
-            <div>
-                <img src="520456.3-subsystem.svg" class="subsystem-img">
-            </div>
-        </section>
-        -->
     </body>
 </html>
