--- a/reports/520456.3/genome-report.html
+++ b/reports/520456.3/genome-report.html
@@ -94,6 +94,10 @@
                 width: 1200px;
                 height: 600px;
             }
+
+            .mute {
+                color: #888;
+            }
         </style>
 
     </head>
@@ -236,7 +240,7 @@
             <table class="med-table kv-table center-table">
                 <thead class="table-header">
                     <tr>
-                        <th colspan="3">Table 3. Annotated Genome Features</th>
+                        <th colspan="3">Table 5. Annotated Genome Features</th>
                     </tr>
                 </thead>
 
