--- a/reports/46170.310/genome-report.html
+++ b/reports/46170.310/genome-report.html
@@ -349,11 +349,11 @@
 
 
         <section>
-            <h2>Antimicrobial Ressistance Analysis</h2>
+            <h2>Antimicrobial Resistance Analysis</h2>
             <table class="large-table kv-table-2 center-table">
                 <thead class="table-header">
                     <tr>
-                        <th colspan="2">Table 3. Protein Features</th>
+                        <th colspan="2">Table 5. Antimicrobial Resistance</th>
                     </tr>
                 </thead>
 
