handle no amr data

--- a/reports/520456.3/genome-report.html
+++ b/reports/520456.3/genome-report.html
@@ -62,9 +62,9 @@
             th  { border-bottom: 2px solid #196E9C; }
             tr { border-bottom: 1px solid #aaa; }
 
-            .overview-table { width: 80%; }
-            .small-table { width: 40%; }
+            .large-table { width: 80%; }
             .med-table { width: 60%; }
+            .small-table { width: 40%; }
 
             .center-table { margin-left: auto; margin-right: auto; }
 
@@ -88,6 +88,7 @@
 
             .main-img {
                 width: 250px;
+                margin-right: .2in;
             }
 
             .circular-fig {
@@ -172,7 +173,7 @@
                 The assembled genome has 33 contigs, with the total length of 3.31 Mbp and %GC of 57.26%.
             </p>
 
-            <table class="overview-table kv-table-2 center-table">
+            <table class="large-table kv-table-2 center-table">
                 <thead class="table-header">
                     <tr><th colspan="4">Table 1. Assembly details for Brucella neotomae 5K33</th></tr>
                 </thead>
@@ -274,6 +275,7 @@
         </section>
 
 
+
         <section>
             <h2>Genome Quality</h2>
             <p>
@@ -283,7 +285,10 @@
                 The reasons affecting the quality of genome are: [genome qc flags].
             </p>
         </section>
-         <section>
+
+
+
+        <section>
             <h2>Specialty Genes</h2>
             <p>
                 PATRIC [1] annotation also includes identification of proteins that have homology to
@@ -352,56 +357,10 @@
                     </tr>
                 </tbody>
             </table>
-
-
-
         </section>
 
-        <section>
-            <!--
-            <h2>Antimicrobial Ressistance Analysis</h2>
-            <table class="small-table kv-table-2 center-table pull-right">
-                <thead class="table-header">
-                    <tr>
-                        <th colspan="2">Table 3. Protein Features</th>
-                    </tr>
-                </thead>
 
-                <tbody>
-                    <tr class="row-header"><td></td> <td>PATRIC</td></tr>
-                    <tr><td>Hypothetical proteins</td><td>772</td></tr>
-                    <tr><td>Proteins with functional assignments</td><td>2662</td></tr>
-                    <tr><td>Proteins with EC number assignments</td><td>947</td></tr>
-                    <tr><td>Proteins with GO assignments</td><td>934</td></tr>
-                    <tr><td>Proteins with Pathway assignments</td><td>746</td></tr>
-                    <tr><td>Proteins with PATRIC genus-specific family (PLfam) assignments</td><td>3434</td></tr>
-                    <tr><td>Proteins with PATRIC cross-genus family (PGfam) assignments</td><td>3434</td></tr>
-                </tbody>
-            </table>
-            -->
 
-            <!--
-            <h2>Antimicrobial Ressistance Genes</h2>
-            <table class="small-table kv-table-2 center-table pull-right">
-                <thead class="table-header">
-                    <tr>
-                        <th colspan="2">Table 3. Protein Features</th>
-                    </tr>
-                </thead>
-
-                <tbody>
-                    <tr class="row-header"><td></td> <td>PATRIC</td></tr>
-                    <tr><td>Hypothetical proteins</td><td>772</td></tr>
-                    <tr><td>Proteins with functional assignments</td><td>2662</td></tr>
-                    <tr><td>Proteins with EC number assignments</td><td>947</td></tr>
-                    <tr><td>Proteins with GO assignments</td><td>934</td></tr>
-                    <tr><td>Proteins with Pathway assignments</td><td>746</td></tr>
-                    <tr><td>Proteins with PATRIC genus-specific family (PLfam) assignments</td><td>3434</td></tr>
-                    <tr><td>Proteins with PATRIC cross-genus family (PGfam) assignments</td><td>3434</td></tr>
-                </tbody>
-            </table>
-            -->
-        </section>
 
 
 
