--- a/reports/46170.310/genome-report.html
+++ b/reports/46170.310/genome-report.html
@@ -136,7 +136,6 @@
             </div>
         </header>
         <div class="clearfix"></div>
-
         <br>
 
 
@@ -153,9 +152,10 @@
             </p>
 
             <p>
-                Brucella neotomae BNWLG2-S2 was isolated from the urine of a 49 year-old female who presented to a clinic in Pennsylvania on April 26th 2016 with symptoms indicative of a UTI. It harbors mcr-1 and blaCTX-M on a Novel IncF Plasmid, First report of mcr-1 in the USA.
+                Heteroresistant vancomycin-intermediate Staphylococcus aureus VB4283
             </p>
         </section>
+        <br>
 
 
         <section>
@@ -193,6 +193,7 @@
                 </tbody>
             </table>
         </section>
+        <br>
 
         <section>
             <h2>Genome Annotation</h2>
@@ -270,7 +271,7 @@
 
             <img src="../46170.310/46170.310-circular.png" class="circular-fig" />
         </section>
-
+        <br>
 
 
         <section>
@@ -282,6 +283,7 @@
                 The reasons affecting the quality of genome are: [genome qc flags].
             </p>
         </section>
+        <br>
 
 
 
@@ -345,6 +347,7 @@
                 </tbody>
             </table>
         </section>
+        <br>
 
 
 
@@ -384,6 +387,7 @@
 
             <img src="../46170.310/46170.310-subsystem.svg" class="subsystem-fig" />
         </section>
+        <br>
 
 
         <section>
