--- a/reports/520456.3/genome-report.html
+++ b/reports/520456.3/genome-report.html
@@ -136,7 +136,6 @@
             </div>
         </header>
         <div class="clearfix"></div>
-
         <br>
 
 
@@ -158,9 +157,10 @@
             </p>
 
             <p>
-                Brucella neotomae BNWLG2-S2 was isolated from the urine of a 49 year-old female who presented to a clinic in Pennsylvania on April 26th 2016 with symptoms indicative of a UTI. It harbors mcr-1 and blaCTX-M on a Novel IncF Plasmid, First report of mcr-1 in the USA.
+                Brucella neotomae was first isolated in 1957 from wood rats (Neotoma lepida) in North America and  has been considered nonzoonotic. Brucella neotomae 5K33 (ATCC 23459) is the type strain and will be used for comparative analysis with other Brucella species.
             </p>
         </section>
+        <br>
 
 
         <section>
@@ -198,6 +198,7 @@
                 </tbody>
             </table>
         </section>
+        <br>
 
         <section>
             <h2>Genome Annotation</h2>
@@ -273,7 +274,7 @@
 
             <img src="../520456.3/520456.3-circular.png" class="circular-fig" />
         </section>
-
+        <br>
 
 
         <section>
@@ -285,6 +286,7 @@
                 The reasons affecting the quality of genome are: [genome qc flags].
             </p>
         </section>
+        <br>
 
 
 
@@ -358,6 +360,7 @@
                 </tbody>
             </table>
         </section>
+        <br>
 
 
 
@@ -376,6 +379,7 @@
 
             <img src="../520456.3/520456.3-subsystem.svg" class="subsystem-fig" />
         </section>
+        <br>
 
 
         <section>
