--- a/reports/46170.310/genome-report.html
+++ b/reports/46170.310/genome-report.html
@@ -367,7 +367,7 @@
                 </tbody>
             </table>
 
-            <h2>Antimicrobial Ressistance Genes</h2>
+            <h2>Antimicrobial Resistance Genes</h2>
 
             [Incomplete]
         </section>
