use networkidle for fetching charts and use outer html for svgs

--- a/reports/520456.3/genome-report.html
+++ b/reports/520456.3/genome-report.html
@@ -91,10 +91,7 @@
                 margin-right: .2in;
             }
 
-            .circular-fig {
-                width: 90%;
-                padding-left: 1in;
-            }
+            .circular-fig {}
 
             .subsystem-fig {
                 width: 1300px;
@@ -105,7 +102,6 @@
                 width: 1200px;
                 height: 150px;
             }
-
 
             .clearfix:after {
                 visibility: hidden;
@@ -131,7 +127,7 @@
             </div>
 
             <div class="report-info pull-right">
-                Report Date: 2018&#x2F;03&#x2F;06<br>
+                Report Date: 2018&#x2F;03&#x2F;07<br>
                 Organism: Brucella neotomae 5K33
             </div>
         </header>
@@ -272,7 +268,7 @@
                 GC content and GC skew are provided (Figure 1).
             </p>
 
-            <img src="../520456.3/520456.3-circular.png" class="circular-fig" />
+            <img src="../520456.3/520456.3-circular.svg" class="circular-fig" />
         </section>
         <br>
 
@@ -378,6 +374,7 @@
             </p>
 
             <img src="../520456.3/520456.3-subsystem.svg" class="subsystem-fig" />
+
         </section>
         <br>
 
@@ -410,6 +407,8 @@
 
             <h3>Comparison to Reference Genomes in the Same Genus</h3>
             <img src="../520456.3/520456.3-tree.svg" class="tree-fig" />
+
+
         </section>
     </body>
 </html>
